Remove about background, make image bigger, fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,7 @@ h2 {
     max-height: 100%;
     height: auto;
 }
+
+.about-title {
+    margin-top: 0rem;
+}
